[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/GUI/InGameGUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GUI/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://LivesManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://ScoreManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://score_manager.gd" type="Script" id=6]
[ext_resource path="res://game.gd" type="Script" id=7]

[node name="Game" type="Node"]
script = ExtResource( 7 )

[node name="LivesManager" parent="." instance=ExtResource( 4 )]
current_lives = 3
lives_gui_node_path = NodePath("../InGameGUICanvasLayer/InGameGUI/HBoxContainer/LivesGUI")

[node name="ScoreManager" parent="." instance=ExtResource( 5 )]
script = ExtResource( 6 )
score_gui_node_path = NodePath("../InGameGUICanvasLayer/InGameGUI/HBoxContainer/ScoreGUI")

[node name="InGameGUICanvasLayer" type="CanvasLayer" parent="."]

[node name="InGameGUI" parent="InGameGUICanvasLayer" instance=ExtResource( 2 )]
anchor_left = -0.0021403
anchor_right = 0.99786
margin_top = -2.37842
margin_bottom = -2.37842

[node name="PauseMenu" parent="InGameGUICanvasLayer" instance=ExtResource( 3 )]
visible = false

[connection signal="lives_set" from="LivesManager" to="InGameGUICanvasLayer/InGameGUI/HBoxContainer/LivesGUI" method="_on_LivesManager_lives_set"]
[connection signal="score_set" from="ScoreManager" to="InGameGUICanvasLayer/InGameGUI/HBoxContainer/ScoreGUI" method="_on_ScoreManager_score_set"]
[connection signal="tree_entered" from="InGameGUICanvasLayer/InGameGUI/HBoxContainer/LivesGUI" to="LivesManager" method="_on_LivesGUI_tree_entered"]
[connection signal="tree_entered" from="InGameGUICanvasLayer/InGameGUI/HBoxContainer/ScoreGUI" to="ScoreManager" method="_on_ScoreGUI_tree_entered"]

[editable path="InGameGUICanvasLayer/InGameGUI"]
